2015-12-11 Roman
- !!:FIX:DAQ.OPC_UA.libOPC_UA: Specific value types OpcUa_IntAuto and OpcUa_UIntAuto for adaptive integer type selection,
	mostly for provide integer into not fixed int64.
    Error OpcUa_BadNoSubscription added to PublishRequest.
    Server folder "ServerCapabilities" added and some items here.
    FIX: Conditional session's clear for selected endpoint is added, mostly for prevent this lost at no "None" policies.
    Virtual function connect() into client is added for the connection control, used into service "CloseSecureChannel" for close connection.
    "Nonce" of the Server part disabled into CreateSessionResponse and ActivateSessionRespons for policy "None".


2015-12-08 Roman
- FIX:DAQ.OPC_UA.libOPC_UA: Using the client certificate into a renewal secure channel request set only for no "None" policies.
    Full session clear at errors into a renewal secure channel request is added.
    Some lack information resolved like to "transportProfileUri" and "securityLevel".
    libOPC_UA independent version control is added.
- FIX:DAQ.OPC_UA.Client: Status codes display fix for the controller's attributes.


2015-12-07 Roman
- !!!!:SYS.TVarObj: Object's twice free possibility prevented. TVarObj::propGet() EVAL result fix.


2015-12-03 Roman
- DB.LibsDB.OscadaLibs.db: UserProtocol.OWEN some tested and fixed.
- DAQ.{LogicLev,ModBus}: User API function attrAdd() expanded by option "ro", for read-only.
- Protocol.UserProtocol: For input requests expanded to try enable, mostly for allow to use static functons into the procedures.
- UI.QTStarter: WinControl's timer stopping moved to it destructor for ensure the timer create/start and stop into one thread.


2015-11-28 Roman
- !!!:FIX:DAQ.OPC_UA:
    Library: Expanded to new error codes.
	Auth processing for client fixed to storing current endpoint description for next actual "policyId" obtain and using to the auth service.
	Wrong NodeId::Opaque type set fix.